2011-02-01  Murray Cumming  <murrayc@murrayc.com>

	Documentation: Remove : from deprecation documentation.

	* gtk/src/colorselection.hg:
	* gtk/src/ruler.hg:
	* gtk/src/toolitem.hg:
	* gtk/src/widget.hg:
	* gtk/src/window.hg: Change @deprecated: to @deprecated.

2011-01-27  Murray Cumming  <murrayc@murrayc.com>

	ComboBox: Make the API more like the one in gtkmm 3.

	* gtk/src/combobox.[hg|ccg]: Added get_entry() and get_entry_text(), which 
	were already in gtkmm 3. 

2011-01-27  Murray Cumming  <murrayc@murrayc.com>

	Allow discovery of the installed m4 files.

	* gtk/gtkmm.pc.in: Add gmmprocm4dir, as we do in gtkmm 3, 
	because gtkmm-2.4 could be using the same newer glibmm that makes this 
	necessary.

2011-01-27  Murray Cumming  <murrayc@murrayc.com>

	ComboBoxText: Make this API more like the one in gtkmm 3.
	
	* gtk/gtkmm/comboboxtext.[h|cc]: Deprecate clear_items() in favour of 
	remove_all(), which is in gtkmm 3, because GTK+ 3 has that, now that GTK+ 3 
	has a real API for this.

2011-01-18  Murray Cumming  <murrayc@murrayc.com>

	Range: Added get/set_round_digits() and property.

	* gtk/src/range.hg: This API Is new in GTK+ in git master.

2.23.90:

2011-01-15  Murray Cumming  <murrayc@murrayc.com>

	ListViewText: Rename methods to be consistent with ComboBoxText.

	* gtk/gtkmm/listviewtext.[h|cc]: Rename append_text(), insert_text(), and 
	prepend_text() to append(), insert() and prepend() because that is what 
	ComboBoxText now uses (because it has other append overloads).
	Keep the old methods as deprecated.

2011-01-14  Murray Cumming  <murrayc@murrayc.com>

	Fix the make check build.

	* gdk/gdkmm/general.h: set_source_pixbuf(): Add default parameter values, 
	as are already in gtkmm-3.0.
	* demos/gtk-demo/demowindow.cc:
	* demos/gtk-demo/example_change_display.cc:
	* demos/gtk-demo/example_drawingarea.cc:
	* demos/gtk-demo/example_menus.cc:
	* demos/gtk-demo/example_pixbufs.cc:
	* demos/gtk-demo/example_sizegroup.cc: