@@ -12453,8 +12453,8 @@ Since: 2.22
 </parameter_description>
 </parameter>
 </parameters>
-<return> The pattern to use for the background or %NULL to use the
-parent's background.
+<return> The pattern to use for the background or
+%NULL to use the parent's background.
 
 </return>
 </function>
@@ -12518,9 +12518,10 @@ Since: 2.18
 </parameter_description>
 </parameter>
 </parameters>
-<return> a #GdkCursor, or %NULL. The returned object is owned
-by the #GdkWindow and should not be unreferenced directly. Use
-gdk_window_set_cursor() to unset the cursor of the window
+<return> a #GdkCursor, or %NULL. The returned
+object is owned by the #GdkWindow and should not be unreferenced
+directly. Use gdk_window_set_cursor() to unset the cursor of the
+window
 
 </return>
 </function>
@@ -16031,8 +16032,8 @@ Since: 2.2
 </parameter_description>
 </parameter>
 </parameters>
-<return> the #GdkVisual (owned by the screen object), or %NULL
-if the visual ID wasn't found.
+<return> the #GdkVisual (owned by the screen
+object), or %NULL if the visual ID wasn't found.
 
 </return>
 </function>
