@@ -155,9 +155,9 @@ Since: 2.6
 </parameter_description>
 </parameter>
 </parameters>
-<return> the pixbuf displayed as logo. The pixbuf is
-owned by the about dialog. If you want to keep a reference
-to it, you have to call g_object_ref() on it.
+<return> the pixbuf displayed as logo. The
+pixbuf is owned by the about dialog. If you want to keep a
+reference to it, you have to call g_object_ref() on it.
 
 </return>
 </function>
@@ -904,8 +904,8 @@ Finds the first entry in an accelerator group for which
 </parameter_description>
 </parameter>
 </parameters>
-<return> the key of the first entry passing @find_func. The key is 
-owned by GTK+ and must not be freed.
+<return> the key of the first entry passing
+@find_func. The key is owned by GTK+ and must not be freed.
 </return>
 </function>
 
@@ -921,7 +921,8 @@ see gtk_accel_group_connect().
 </parameter_description>
 </parameter>
 </parameters>
-<return> the #GtkAccelGroup to which @closure is connected, or %NULL.
+<return> the #GtkAccelGroup to which @closure
+is connected, or %NULL.
 </return>
 </function>
 
@@ -1845,7 +1846,8 @@ Since: 2.12
 </parameter_description>
 </parameter>
 </parameters>
-<return> the menu item provided by the action, or %NULL.
+<return> the menu item provided by the
+action, or %NULL.
 
 </return>
 </function>
@@ -1939,8 +1941,9 @@ Since: 2.8
 </parameter_description>
 </parameter>
 </parameters>
-<return> the accel closure for this action. The returned closure is
-owned by GTK+ and must not be unreffed or modified.
+<return> the accel closure for this action. The
+returned closure is owned by GTK+ and must not be unreffed
+or modified.
 </return>
 </function>
 
@@ -8631,7 +8634,8 @@ Since: 2.10
 </parameter_description>
 </parameter>
 </parameters>
-<return> a newly-allocated binary block of data which must
+<return> a
+newly-allocated binary block of data which must
 be freed with g_free(), or %NULL if retrieving
 the selection data failed. (This could happen
 for various reasons, in particular if the
@@ -8658,7 +8662,8 @@ Since: 2.4
 </parameter_description>
 </parameter>
 <parameter name="targets">
-<parameter_description> location to store an array of targets. The result
+<parameter_description>  
+location to store an array of targets. The result
 stored here must be freed with g_free().
 </parameter_description>
 </parameter>
@@ -10763,8 +10768,8 @@ Finds a child property of a container class by name.
 </parameter_description>
 </parameter>
 </parameters>
-<return> the #GParamSpec of the child property or %NULL if @class has no
-child property with that name.
+<return> the #GParamSpec of the child property or
+%NULL if @class has no child property with that name.
 </return>
 </function>
 
@@ -10805,7 +10810,8 @@ Returns all child properties of a container class.
 </parameter_description>
 </parameter>
 </parameters>
-<return> a newly allocated %NULL-terminated array of #GParamSpec*. 
+<return>  a newly 
+allocated %NULL-terminated array of #GParamSpec*. 
 The array must be freed with g_free().
 </return>
 </function>
@@ -10977,8 +10983,9 @@ Since: 2.14
 </parameter_description>
 </parameter>
 </parameters>
-<return> The child widget which will recieve the focus inside @container when
-the @conatiner is focussed, or %NULL if none is set.
+<return> The child widget which will receive the
+focus inside @container when the @conatiner is focussed,
+or %NULL if none is set.
 
 </return>
 </function>
@@ -12069,8 +12076,8 @@ passes the correct target list to this function.
 </parameter_description>
 </parameter>
 </parameters>
-<return> first target that the source offers and the dest can
-accept, or %GDK_NONE
+<return> first target that the source offers
+and the dest can accept, or %GDK_NONE
 </return>
 </function>
 
@@ -17464,9 +17471,10 @@ Since: 2.14
 </parameter_description>
 </parameter>
 </parameters>
-<return> a #GSList containing a #GFile for each selected
-file and subfolder in the current folder.  Free the returned list
-with g_slist_free(), and the files with g_object_unref().
+<return> a #GSList
+containing a #GFile for each selected file and subfolder in the
+current folder.  Free the returned list with g_slist_free(), and
+the files with g_object_unref().
 
 </return>
 </function>
@@ -17723,10 +17731,10 @@ Since: 2.4
 </parameter_description>
 </parameter>
 </parameters>
-<return> a #GSList containing the current set of
-user selectable filters. The contents of the list are
-owned by GTK+, but you must free the list itself with
-g_slist_free() when you are done with it.
+<return> a
+#GSList containing the current set of user selectable filters. The
+contents of the list are owned by GTK+, but you must free the list
+itself with g_slist_free() when you are done with it.
 
 </return>
 </function>
@@ -19912,7 +19920,8 @@ If there is no current event, the function returns %NULL.
 </description>
 <parameters>
 </parameters>
-<return> a copy of the current event, or %NULL if no current event.
+<return> a copy of the current event, or %NULL if no
+current event.
 </return>
 </function>
 
@@ -21841,10 +21850,10 @@ or %NULL to list all icons.
 </parameter_description>
 </parameter>
 </parameters>
-<return> a #GList list holding the names of all the
-icons in the theme. You must first free each element
-in the list with g_free(), then free the list itself
-with g_list_free().
+<return> a #GList list
+holding the names of all the icons in the theme. You must first
+free each element in the list with g_free(), then free the list
+itself with g_list_free().
 
 </return>
 </function>
@@ -26107,7 +26116,8 @@ pango_layout_get_attribute (gtk_label_get_layout (label)).
 </parameter_description>
 </parameter>
 </parameters>
-<return> the attribute list, or %NULL if none was set.
+<return> the attribute list, or %NULL
+if none was set.
 </return>
 </function>
 
@@ -28067,6 +28077,21 @@ Since: 2.8
 <return></return>
 </function>
 
+<function name="gtk_menu_get_accel_group">
+<description>
+@menu a #GtkMenu
+
+Gets the #GtkAccelGroup which holds global accelerators for the
+menu.  See gtk_menu_set_accel_group().
+
+
+</description>
+<parameters>
+</parameters>
+<return> the #GtkAccelGroup associated with the menu.
+</return>
+</function>
+
 <function name="gtk_menu_get_accel_path">
 <description>
 Retrieves the accelerator path set on the menu.
@@ -28082,6 +28107,41 @@ Since: 2.14
 </parameters>
 <return> the accelerator path set on the menu.
 
+</return>
+</function>
+
+<function name="gtk_menu_get_active">
+<description>
+Returns the selected menu item from the menu.  This is used by the
+#GtkOptionMenu.
+
+
+</description>
+<parameters>
+<parameter name="menu">
+<parameter_description> a #GtkMenu
+</parameter_description>
+</parameter>
+</parameters>
+<return> the #GtkMenuItem that was last selected
+in the menu.  If a selection has not yet been made, the
+first menu item is selected.
+</return>
+</function>
+
+<function name="gtk_menu_get_attach_widget">
+<description>
+Returns the #GtkWidget that the menu is attached to.
+
+
+</description>
+<parameters>
+<parameter name="menu">
+<parameter_description> a #GtkMenu
+</parameter_description>
+</parameter>
+</parameters>
+<return> the #GtkWidget that the menu is attached to
 </return>
 </function>
 
@@ -33253,7 +33313,8 @@ gtk_init(), or gtk_init_check().
 </parameter_description>
 </parameter>
 <parameter name="argv">
-<parameter_description> a pointer to the array of command line arguments
+<parameter_description> a pointer to the array of
+command line arguments
 </parameter_description>
 </parameter>
 </parameters>
@@ -37325,6 +37386,18 @@ and should not be modified or freed.
 </return>
 </function>
 
+<function name="gtk_progress_bar_new">
+<description>
+Creates a new #GtkProgressBar.
+
+
+</description>
+<parameters>
+</parameters>
+<return> a #GtkProgressBar.
+</return>
+</function>
+
 <function name="gtk_progress_bar_new_with_adjustment">
 <description>
 Creates a new #GtkProgressBar with an associated #GtkAdjustment.
@@ -38189,6 +38262,25 @@ Since: 2.12
 </return>
 </function>
 
+<function name="gtk_range_get_round_digits">
+<description>
+Gets the number of digits to round the value to when
+it changes. See #GtkRange::change-value.
+
+Since: 2.24
+
+</description>
+<parameters>
+<parameter name="range">
+<parameter_description> a #GtkRange
+</parameter_description>
+</parameter>
+</parameters>
+<return> the number of digits to round to
+
+</return>
+</function>
+
 <function name="gtk_range_get_show_fill_level">
 <description>
 Gets whether the range displays the fill level graphically.
@@ -38520,6 +38612,27 @@ Since: 2.12
 </parameter>
 <parameter name="restrict_to_fill_level">
 <parameter_description> Whether the fill level restricts slider movement.
+</parameter_description>
+</parameter>
+</parameters>
+<return></return>
+</function>
+
+<function name="gtk_range_set_round_digits">
+<description>
+Sets the number of digits to round the value to when
+it changes. See #GtkRange::change-value.
+
+Since: 2.24
+
+</description>
+<parameters>
+<parameter name="range">
+<parameter_description> a #GtkRange
+</parameter_description>
+</parameter>
+<parameter name="round_digits">
+<parameter_description> the precision in digits, or -1
 </parameter_description>
 </parameter>
 </parameters>
@@ -42497,7 +42610,7 @@ Since: 2.14
 </parameter_description>
 </parameter>
 </parameters>
-<return>  the data type of the selection.
+<return> the data type of the selection.
 
 </return>
 </function>
@@ -42608,7 +42721,7 @@ Since: 2.14
 </parameter_description>
 </parameter>
 </parameters>
-<return>  the target of the selection.
+<return> the target of the selection.
 
 </return>
 </function>
@@ -42628,7 +42741,8 @@ any selection.
 </parameter_description>
 </parameter>
 <parameter name="targets">
-<parameter_description> location to store an array of targets. The result
+<parameter_description>
+location to store an array of targets. The result
 stored here must be freed with g_free().
 </parameter_description>
 </parameter>
@@ -48156,8 +48270,8 @@ Since: 2.10
 </parameter_description>
 </parameter>
 </parameters>
-<return> the #GdkAtom that corresponds to the newly registered
-format's mime-type.
+<return> the #GdkAtom that corresponds to the
+newly registered format's mime-type.
 
 </return>
 </function>
@@ -48181,8 +48295,8 @@ Since: 2.10
 </parameter_description>
 </parameter>
 </parameters>
-<return> the #GdkAtom that corresponds to the newly registered
-format's mime-type.
+<return> the #GdkAtom that corresponds to the
+newly registered format's mime-type.
 
 </return>
 </function>
@@ -48217,8 +48331,8 @@ Since: 2.10
 </parameter_description>
 </parameter>
 </parameters>
-<return> the #GdkAtom that corresponds to the newly registered
-format's mime-type.
+<return> the #GdkAtom that corresponds to the
+newly registered format's mime-type.
 
 </return>
 </function>
@@ -48256,8 +48370,8 @@ Since: 2.10
 </parameter_description>
 </parameter>
 </parameters>
-<return> the #GdkAtom that corresponds to the newly registered
-format's mime-type.
+<return> the #GdkAtom that corresponds to the
+newly registered format's mime-type.
 
 </return>
 </function>
@@ -64031,8 +64145,8 @@ Since: 2.2
 </parameter_description>
 </parameter>
 </parameters>
-<return> the #GParamSpec of the style property or %NULL if @class has no
-style property with that name.
+<return> the #GParamSpec of the style property or
+%NULL if @class has no style property with that name.
 </return>
 </function>
 
@@ -64094,8 +64208,9 @@ Since: 2.2
 </parameter_description>
 </parameter>
 </parameters>
-<return> an newly allocated array of #GParamSpec*. The array must 
-be freed with g_free().
+<return> an newly
+allocated array of #GParamSpec*. The array must be freed with
+g_free().
 </return>
 </function>
 
