@@ -1,5 +1,12 @@
 2011-02-01  Murray Cumming  <murrayc@murrayc.com>
 
+	Regenerated the XML files for the C API documentation.
+
+	* gdk/src/gdk_docs.xml:
+	* gtk/src/gtk_docs.xml: Regenerated with docextract_to_xml.py.
+
+2011-02-01  Murray Cumming  <murrayc@murrayc.com>
+
 	Documentation: Remove : from deprecation documentation.
 
 	* gtk/src/colorselection.hg:
